Added minimal academic requirement test

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.sisautomation</groupId>
 	<artifactId>sis</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1-POC</version>
 	<packaging>jar</packaging>
 
 	<name>sis</name>
