moved to Page object model

--- a/src/config.properties
+++ b/src/config.properties
@@ -1,3 +1,6 @@
 browser=chrome
-environment=http://pswebdev2.soe.uq.edu.au:9600
-//environmnent=https://pswebdev.soe.uq.edu.au:9600
+URL=http://pswebdev1.soe.uq.edu.au:8700
+ScreenshotOnPass=true
+ScreenshotOnFail=true
+//URL=http://pswebdev2.soe.uq.edu.au:9600
+//URL=https://pswebdev.soe.uq.edu.au:9600
