--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.sisautomation</groupId>
 	<artifactId>sis</artifactId>
-	<version>0.0.1-POC</version>
+	<version>0.1</version>
 	<packaging>jar</packaging>
 
 	<name>sis</name>
@@ -54,6 +54,11 @@
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-chrome-driver</artifactId>
 			<version>2.53.1</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
 		</dependency>
 	</dependencies>
 	<build>
