graduation search smoke and screensoth on pass

--- a/src/config.properties
+++ b/src/config.properties
@@ -1,6 +1,5 @@
 browser=chrome
 URL=http://pswebdev1.soe.uq.edu.au:8700
-ScreenshotOnPass=true
-ScreenshotOnFail=true
-//URL=http://pswebdev2.soe.uq.edu.au:9600
-//URL=https://pswebdev.soe.uq.edu.au:9600
+screenshot=true
+DEFAULT_USER=UQTAHME4
+DEFAULT_PASSWORD=IT$1Sa$S
