Modifying Screenshot logic after review

--- a/src/config.properties
+++ b/src/config.properties
@@ -2,6 +2,7 @@ browser=chrome
 #URL=http://pswebdev1.soe.uq.edu.au:8700
 #URL=https://pswebdev.soe.uq.edu.au:9700
 URL=http://pswebdev1.soe.uq.edu.au:8060
-screenshot=true
+screenshotOnPass=true
+screenshotOnFail=true
 DEFAULT_USER=UQTAHME4
 DEFAULT_PASSWORD=IT$1Sa$S
