running selenium standalone server in docker

--- a/src/config.properties
+++ b/src/config.properties
@@ -6,3 +6,5 @@ screenshotOnPass=true
 screenshotOnFail=true
 DEFAULT_USER=UQTAHME4
 DEFAULT_PASSWORD=IT$1Sa$S
+#webdriver=localhost
+webdriver=192.168.99.100:4444
