--- a/src/config.properties
+++ b/src/config.properties
@@ -1,7 +1,7 @@
 browser=chrome
 #URL=http://pswebdev1.soe.uq.edu.au:8700
-#URL=https://pswebdev.soe.uq.edu.au:9700
-URL=http://pswebdev1.soe.uq.edu.au:8060
+URL=https://pswebdev.soe.uq.edu.au:9700
+#URL=http://pswebdev1.soe.uq.edu.au:8060
 screenshotOnPass=true
 screenshotOnFail=true
 DEFAULT_USER=UQTAHME4
