pointing to a working environment

--- a/src/config.properties
+++ b/src/config.properties
@@ -1,7 +1,8 @@
 browser=chrome
 #URL=http://pswebdev1.soe.uq.edu.au:8700
-URL=https://pswebdev.soe.uq.edu.au:9700
+#URL=https://pswebdev.soe.uq.edu.au:9700
 #URL=http://pswebdev1.soe.uq.edu.au:8060
+URL=http://pswebdev2.soe.uq.edu.au:9600/
 screenshotOnPass=true
 screenshotOnFail=true
 DEFAULT_USER=UQTAHME4
