--- a/src/config.properties
+++ b/src/config.properties
@@ -1,8 +1,10 @@
 browser=chrome
+APP_VER=fluent
 #URL=http://pswebdev1.soe.uq.edu.au:8700
 #URL=https://pswebdev.soe.uq.edu.au:9700
 #URL=http://pswebdev1.soe.uq.edu.au:8060
 URL=http://pswebdev2.soe.uq.edu.au:9600/
+fluidURL=http://barrel.soe.uq.edu.au:8100
 screenshotOnPass=true
 screenshotOnFail=true
 DEFAULT_USER=UQTAHME4
