--- a/src/config.properties
+++ b/src/config.properties
@@ -3,7 +3,8 @@ APP_VER=fluent
 #URL=http://pswebdev1.soe.uq.edu.au:8700
 #URL=https://pswebdev.soe.uq.edu.au:9700
 #URL=http://pswebdev1.soe.uq.edu.au:8060
-URL=http://pswebdev1.soe.uq.edu.au:7600/
+#URL=http://pswebdev1.soe.uq.edu.au:7600/
+URL=http://pswebdev2.soe.uq.edu.au:9600/
 fluidURL=http://barrel.soe.uq.edu.au:8100
 screenshotOnPass=true
 screenshotOnFail=true
