Implemented fluent wait POC for Student Financials

--- a/src/config.properties
+++ b/src/config.properties
@@ -4,7 +4,8 @@ browser=chrome
 #URL=http://pswebdev1.soe.uq.edu.au:8060
 #URL=http://pswebdev1.soe.uq.edu.au:7600/
 #URL=http://pswebdev2.soe.uq.edu.au:9600/
-URL=https://pswebdev.soe.uq.edu.au:7600
+#URL=https://pswebdev.soe.uq.edu.au:7600
+URL=http://barrel.soe.uq.edu.au:8065
 fluidURL=http://barrel.soe.uq.edu.au:8100
 screenshotOnPass=true
 screenshotOnFail=true
