--- a/src/config.properties
+++ b/src/config.properties
@@ -5,7 +5,8 @@ browser=chrome
 #URL=http://pswebdev1.soe.uq.edu.au:7600/
 #URL=http://pswebdev2.soe.uq.edu.au:9600/
 #URL=https://pswebdev.soe.uq.edu.au:7600
-URL=http://barrel.soe.uq.edu.au:8065
+#URL=http://barrel.soe.uq.edu.au:8065
+URL=http://barrel.soe.uq.edu.au:9200
 fluidURL=http://barrel.soe.uq.edu.au:8100
 screenshotOnPass=true
 screenshotOnFail=true
