Completed SF017 * DB connector pending steps

--- a/src/config.properties
+++ b/src/config.properties
@@ -6,7 +6,8 @@ browser=chrome
 #URL=http://pswebdev2.soe.uq.edu.au:9600/
 #URL=https://pswebdev.soe.uq.edu.au:7600
 #URL=http://barrel.soe.uq.edu.au:8065
-URL=http://barrel.soe.uq.edu.au:9200
+#URL=http://barrel.soe.uq.edu.au:9200
+URL=http://barrel.soe.uq.edu.au:9600
 fluidURL=http://barrel.soe.uq.edu.au:8100
 screenshotOnPass=true
 screenshotOnFail=true
